deploy/kubernetes/controller/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: techne-controller
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
---
apiVersion: v1
kind: Namespace
metadata:
  name: techne-execution
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
